[build-system]
requires = ["setuptools >= 64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "retail-investment-recommendation-system"
version = "0.1.0"
description = "A Recommendation System for Retail Investments"
readme = "README.md"
authors = [
    { name = "nikhil-chigali", email = "nikhil.chigali@gmail.com" }
]
license = { text = "MIT" }
requires-python = ">=3.11"

dependencies = [
    "numpy",
    "pandas",
    "scikit-learn",
    "kafka-python",
    "boto3",
    "zenml",
    "mlflow",
    "dvc",
    "pyspark",
    "matplotlib",
    "seaborn",
    "pydantic",
    "ml-collections",
    "python-dotenv"
]

[project.urls]
Homepage = "https://github.com/nikhil-chigali/retail-investment-recommendation-system"
Bug-Tracker = "https://github.com/nikhil-chigali/retail-investment-recommendation-system/issues"
